--- a/presentation.qmd
+++ b/presentation.qmd
@@ -55,17 +55,20 @@ data("penguins")
 
 ## Introduction
 
-\-"UFO Sightings Redux" dataset is obtained from National UFO Reporting center. The dataset offers a detailed look into various aspects of UFO sightings, including temporal details, geographical information, and specific characteristics of the reported sightings.Our mission is to decipher patterns, trends, and anomalies within this dataset. By employing data analysis techniques, we aim to uncover temporal, spatial, and thematic insights that may bring us closer to understanding the enigmatic world of UFO sightings.
+-UFO Sightings Redux" dataset is obtained from National UFO Reporting center. The dataset offers a detailed look into various aspects of UFO sightings, including temporal details, geographical information, and specific characteristics of the reported sightings.Our mission is to decipher patterns, trends, and anomalies within this dataset. By employing data analysis techniques, we aim to uncover temporal, spatial, and thematic insights that may bring us closer to understanding the enigmatic world of UFO sightings.
 
-# Q1: How many UFO sightings have been reported worldwide ? Particular regions where these sightings occur more frequently ?
+## Q1: How many UFO sightings have been reported worldwide ? Particular regions where these sightings occur more frequently ?
 
-##Motivation for Question1:
+## Motivation for Question1:
 
 -By exploring the distribution of UFO sightings across different locations, we aim to uncover geographical patterns and hotspots.
 
 -This investigation can provide insights into whether certain areas or countries have a higher incidence of reported UFO sightings, contributing to our understanding of potential regional variations in extraterrestrial encounter reports.
 
+## Global Distribution of UFO Sightings
+
 ```{r}
+suppressWarnings({
 ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
 
 library(ggplot2)
@@ -92,7 +95,7 @@ world_map_with_sightings <- left_join(world_map, sightings_by_country, by = c("r
 choropleth_map <- ggplot() +
   geom_polygon(data = world_map_with_sightings, aes(x = long, y = lat, group = group, fill = n), color = "black") +
   geom_point(data = ufo_sightings_clean, aes(x = longitude, y = latitude), color = "red", alpha = 0.3) +
-  labs(title = "Global Distribution of UFO Sightings by Country",
+  labs(title = "Global Distribution of UFOs",
        subtitle = "Choropleth Map with Individual Sightings",
        x = "Longitude",
        y = "Latitude",
@@ -127,23 +130,93 @@ heatmap_with_map <- ggplot() +
 # Print the choropleth map
 print(choropleth_map)
 
-# Print the heatmap with map outline
-print(heatmap_with_map)
 
+})
 ```
 
-## The UFO Footprints with Numbers
+## Frequency of Sightings
 
-## Popular Destination
+```{r}
+# Print the heatmap with map outline
+print(heatmap_with_map)
+```
 
-USA
+## Inferences Drawn from the Plots
 
-# Q2: Is there any specific time of the day when UFO sighting are more prevalent?
+-   The total number of UFOs sighted globally is 74,345
+
+-   UFO are sighted more frequently in North America
+
+## Q2: Is there any specific time of the day when UFO sighting are more prevalent?
 
 ## Motivation for Question2:
 
 -   By exploring temporal patterns in UFO sightings, we aim to identify if certain times of the day are associated with a higher frequency of reported encounters.
--   This investigation can provide valuable insights into the temporal aspects of UFO sightings, potentially revealing patterns that could be linked to environmental conditions, human behavior, or other factors. \## Understanding Time Trend for UFO sightings
+-   This investigation can provide valuable insights into the temporal aspects of UFO sightings, potentially revealing patterns that could be linked to environmental conditions, human behavior, or other factors.
+
+## Understanding Time Trend for UFO sightings
+
+```{r}
+suppressWarnings({
+library(ggplot2)
+library(png)
+library(tidyverse)
+library(lubridate)
+library(viridis)
+library(png)
+library(cowplot)
+
+# Read the data
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
+
+# Convert character strings of date_time variable into POSIXct format
+ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
+
+# Extract the hour component
+ufo_sightings$hour_of_day <- hour(ufo_sightings$date_time)
+
+# Create a summary table for counts of sightings per hour
+hourly_counts <- table(ufo_sightings$hour_of_day)
+
+# Convert the summary table to a data frame
+hourly_counts_df <- data.frame(hour = as.numeric(names(hourly_counts)), count = as.numeric(hourly_counts))
+
+# Plotting with polar coordinates
+bar_plot_polar <- ggplot(hourly_counts_df, aes(x = factor(hour), y = count)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  scale_x_discrete(name = "Hour of Day") +
+  scale_y_continuous(name = NULL) +
+  labs(title = "UFO Sightings by Hour of Day") +
+  theme_minimal() +
+  theme(axis.text.y = element_blank(),
+        axis.line.y = element_blank(),
+        axis.ticks = element_blank(), 
+        panel.grid.major.y = element_blank()) +
+  coord_polar(start = -pi/1.45)
+
+# Read the image
+img <- readPNG("images/q2Clock.png")
+ger <- grid::rasterGrob(img, interpolate=TRUE)
+
+# Draw the plot
+coord_plot <- ggdraw(bar_plot_polar)
+
+# Combine the plot and the image
+coord_plot + draw_grob(ger, 0.168, 0.18, 0.65, 0.65) + 
+  draw_plot(bar_plot_polar)
+
+})
+```
+
+## Inference drawn from the plot
+
+1.  Optimal Visibility: Darker evening skies provide better visibility, aiding in the detection of unusual objects or lights.
+
+2.  Leisure Activities: Evening leisure pursuits, like stargazing and outdoor activities, increase opportunities for people to spot UFOs while relaxing outdoors.
+
+3.  Cultural Influence: Cultural depictions of UFO sightings during nighttime and psychological factors may heighten vigilance and reporting of sightings during evening hours.
+
+## Count of UFO by different Time of Day
 
 ```{r}
 suppressWarnings({
@@ -249,7 +322,7 @@ ggplot(ufo_summary, aes(x = time_of_day, y = count, fill = count)) +
 })
 ```
 
-## Observations from the UFO Sightings Count Plot by Time of Day
+## Observations for Q2
 
 -   Nighttime records the highest UFO sightings, with 34,283 occurrences, followed closely by Evening with 30,211 sightings.
 
