--- a/presentation.qmd
+++ b/presentation.qmd
@@ -219,52 +219,79 @@ coord_plot + draw_grob(ger, 0.168, 0.18, 0.65, 0.65) +
 ## Count of UFO by different Time of Day
 
 ```{r}
-library(ggplot2)
-library(png)
+suppressWarnings({
+# Load necessary libraries
 library(tidyverse)
-library(lubridate)
-library(viridis)
-library(png)
-library(cowplot)
 
-# Read the data
+#> Loading the Dataset 
+
+#> UFO_Sightings
+
 ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
 
-# Convert character strings of date_time variable into POSIXct format
+# Load the lubridate package
+library(lubridate)
+
+
+# converting character strings of date_time variable into a format that R can recognize and manipulate as date-time data.
 ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
 
-# Extract the hour component
-ufo_sightings$hour_of_day <- hour(ufo_sightings$date_time)
+# Extracting the hour component
+hour_of_day <- hour(ufo_sightings$date_time)
 
-# Create a summary table for counts of sightings per hour
-hourly_counts <- table(ufo_sightings$hour_of_day)
+# Define time ranges for each bin
+morning_hours <- 6:11
+afternoon_hours <- 12:17
+evening_hours <- 18:21
+night_hours <- c(22:23, 0:5)
 
-# Convert the summary table to a data frame
-hourly_counts_df <- data.frame(hour = as.numeric(names(hourly_counts)), count = as.numeric(hourly_counts))
+# Function to assign time bins
+assign_time_bin <- function(hour_of_day) {
+  if (hour_of_day %in% morning_hours) {
+    return("Morning")
+  } else if (hour_of_day %in% afternoon_hours) {
+    return("Afternoon")
+  } else if (hour_of_day %in% evening_hours) {
+    return("Evening")
+  } else {
+    return("Night")
+  }
+}
 
-# Plotting with polar coordinates
-bar_plot_polar <- ggplot(hourly_counts_df, aes(x = factor(hour), y = count)) +
-  geom_bar(stat = "identity", fill = "steelblue") +
-  scale_x_discrete(name = "Hour of Day") +
-  scale_y_continuous(name = NULL) +
-  labs(title = "UFO Sightings by Hour of Day") +
+
+library(ggplot2)
+library(dplyr)
+
+# Read the CSV file and prepare the data
+ufo_data <- read.csv("ufo_sightings_with_time_of_day.csv")
+
+# Convert time_of_day to a factor with specified order
+ufo_data$time_of_day <- factor(ufo_data$time_of_day, levels = c("Morning", "Afternoon", "Evening", "Night"))
+
+# Group the data by time_of_day and summarize to calculate count of sightings
+ufo_summary <- ufo_data %>%
+  group_by(time_of_day) %>%
+  summarize(count = n())
+
+# Create the plot
+ggplot(ufo_summary, aes(x = time_of_day, y = count, fill = count)) +
+  geom_bar(stat = "identity") +
+  scale_fill_gradient(name = "Count", low = "#ADD8E6", high = "#000080") +  # Use a gradient scale from light blue to navy blue
+  geom_text(aes(label = count), vjust = -0.5, color = "black", size = 3) +  
   theme_minimal() +
-  theme(axis.text.y = element_blank(),
-        axis.line.y = element_blank(),
-        axis.ticks = element_blank(), 
-        panel.grid.major.y = element_blank()) +
-  coord_polar(start = -pi/1.45)
-
-# Read the image
-img <- readPNG("images/q2Clock.png")
-ger <- grid::rasterGrob(img, interpolate=TRUE)
-
-# Draw the plot
-coord_plot <- ggdraw(bar_plot_polar)
-
-# Combine the plot and the image
-coord_plot + draw_grob(ger, 0.168, 0.18, 0.65, 0.65) + 
-  draw_plot(bar_plot_polar)
+  labs(title = "UFO Sightings Count by Time of Day",
+       x = "Time of Day",
+       y = "Count") +
+  theme(plot.background = element_rect(fill = "white", color = NA),  
+        panel.background = element_rect(fill = "white", color = NA),  
+        panel.grid.major = element_line(color = "gray", size = 0.2),  
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(color = "black"),
+        axis.text = element_text(color = "black", size = 10),  # Adjust size of axis text
+        axis.title = element_text(color = "black", size = 12),  # Adjust size of axis titles
+        plot.title = element_text(hjust = 0.5, size = 20, color = "black", face = "bold"), 
+        legend.position = "right") +  # Position legend on the right side
+  guides(fill = guide_colorbar(title.position = "top", title.vjust = 0.5))  })
 ```
 
 1.  Optimal Visibility: Darker evening skies provide better visibility, aiding in the detection of unusual objects or lights.
